--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,7 @@
                 "jspm_packages/npm/@ngrx/store@2.2.1"
             ],
             "@types/hammerjs": [
-                "jspm_packages/npm/@types/hammerjs@2.0.33"
+                "node_modules/@types/hammerjs"
             ],
             "rxjs/*": [
                 "jspm_packages/npm/rxjs@5.0.0-beta.12/*"
